--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^8.1.3",
-    "noflo-webpack-config": "^1.1.0"
+    "noflo-webpack-config": "^1.1.0",
+    "nyc": "^15.1.0"
   },
   "noflo": {
     "loader": "src/loader.js"
