Initial: support for generating noflo-assembly components

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/noflo/noflo-swagger-client#readme",
   "dependencies": {
     "noflo": "^1.0.0",
+    "noflo-assembly": "^0.2.0",
     "slug": "^3.3.4",
     "swagger-client": "^3.10.13"
   },
