Add noflo-assembly ecosystem tag

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "keywords": [
     "noflo",
-    "ecosystem:noflo"
+    "ecosystem:noflo",
+    "ecosystem:noflo-assembly"
   ],
   "author": "Henri Bergius <henri.bergius@iki.fi>",
   "license": "MIT",
