--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/noflo/noflo-swagger-client#readme",
   "dependencies": {
+    "js-yaml": "^4.0.0",
     "noflo": "^1.0.0",
     "noflo-assembly": "^0.3.1",
     "slug": "^4.0.0",
